WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45810
[GStreamer] XOverlay API changes break the build
https://bugs.webkit.org/show_bug.cgi?id=45810
Summary
[GStreamer] XOverlay API changes break the build
Philippe Normand
Reported
2010-09-15 01:13:35 PDT
The upcoming gst-plugins-base 0.10.31 (currently git master) will break our build, see:
http://cgit.freedesktop.org/gstreamer/gst-plugins-base/commit/?id=6dc02137fb8e952c79479f0c1154831c1b761410
We need some ifdefs :)
Attachments
proposed patch
(1.76 KB, patch)
2010-09-15 01:40 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2010-09-15 01:40:27 PDT
Created
attachment 67656
[details]
proposed patch
Martin Robinson
Comment 2
2010-09-16 08:21:57 PDT
Comment on
attachment 67656
[details]
proposed patch Great!
Philippe Normand
Comment 3
2010-09-16 08:32:32 PDT
Committed
r67621
: <
http://trac.webkit.org/changeset/67621
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug