2010-09-15  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GStreamer] XOverlay API changes break the build
        https://bugs.webkit.org/show_bug.cgi?id=45810

        Cope with the GStreamer XOverlay API change for the upcoming
        0.10.31 version.
        No new tests, build fix only.

        * platform/graphics/gstreamer/GStreamerGWorld.cpp:
        (WebCore::GStreamerGWorld::setWindowOverlay):

Canonical link: https://commits.webkit.org/58345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67621 268f45cc-cd09-0410-ab3c-d52691b4dbfc